@@ -1,0 +1,14 @@
+require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
+
+describe Activity do
+  before(:each) do
+    @valid_attributes = {
+      :user  => Factory(:user),
+      :asset => Factory(:lead)
+    }
+  end
+
+  it "should create a new instance given valid attributes" do
+    Activity.create!(@valid_attributes)
+  end
+end
